src/Asm.MooBank.Web/MooBankApp/src/App.scss
@import "~@andrewmclachlan/mooapp/scss/mooapp.scss";

:root {
    --bs-font-sans-serif: 'Open Sans Condensed', 'Franklin Gothic', Helvetica, Arial, sans-serif;
    --breadcrumb-background: #333;
    --font-family-alt: 'Open Sans', 'Franklin Gothic', Helvetica, Arial, sans-serif;
    --bs-border-color: #AAA;
}

label {
    font-family: var(--font-family-alt);
}

@media (prefers-color-scheme: dark) {
    :root {
        --breadcrumb-background: #1A1919;
    }

    body {
        color-scheme: dark;
    }

    .table {
        --bs-table-striped-bg: rgba(0, 0, 0, 0.5);
    }
}

.light {
    --breadcrumb-background: #CFCCCC;
    color-scheme: light;

    .table {
        --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
    }
}

.dark {
    --breadcrumb-background: #1A1919;
    color-scheme: dark;

    .table {
        --bs-table-striped-bg: rgba(0, 0, 0, 0.5);
    }
}

.negative {
    color: rgb(204, 0, 0);
}

.mobile {
    display: none;
}

.desktop {
    display: inline;
}

.alert {
    margin-bottom: 0;
}

.clear {
    clear: both;
}

.clearable {
    position: relative;

    svg {
        position: absolute;
        right: 1rem;
        top: calc(1rem - 7px);
    }
}

.breadcrumb {
    --bs-breadcrumb-margin-bottom: 0;
}

.breadcrumb-container {
    font-weight: bold;
    align-items: center;
    background-color: var(--breadcrumb-background);
    margin-bottom: 0.5rem;

    >.container {
        height: 2rem;
        padding-bottom: 2px;
    }
}

nav.secondary-nav {

    color: #CCCCCC;
    font-weight: bold;

    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        font-size: 0.9rem;
    }

    button,
    button:hover,
    button:active,
    button:focus {
        outline: none;
        background: none;
        border: none;
        font-weight: bold;
        font-size: 0.9rem;
    }

    button:hover {
        text-decoration: underline;
    }

    a,
    button {
        color: #999;
    }

    li {
        display: inline-block;

        padding-left: 0.5rem;

        &:after {
            padding-left: 0.5rem;
            content: "|";
        }

        &:last-child:after {
            content: "";
            padding: 0;
        }
    }
}

/*#region Headings*/
h3,
legend {
    font-size: 1em;
    margin-top: 0;
    font-weight: bold;
}

legend {
    display: none;

}

/*#endregion*/

/*#region Forms*/
input,
select,
textarea {
    font-family: "Open Sans", "Segoe UI", Arial, sans-serif;
}

input.description {
    width: 500px;
}

input[type=submit] {
    color: #FFF;
    background: linear-gradient(to bottom, #111 0%, #3A3A3A 50%, #000 50%, #000 100%);
    border: none;
    border-radius: 5px;
    padding: 5px 20px;
}

/*#endregion*/

/*#region Tables*/

table {
    border-spacing: 0;
}

thead th {
    font-weight: normal;
    font-size: 1.2rem;
}

td {
    vertical-align: middle;
}

.table {

    .page-totals {
        font-family: var(--font-family-alt);
    }

    tfoot {
        /*border-top: 2px double #000;*/
        border-top-style: double;

        td {
            vertical-align: middle;
        }

        button.btn {
            font-weight: bold;
            outline: none;
        }
    }

    .sortable {
        cursor: pointer;

        &.ascending::before {
            content: '\1F815'
        }

        &.descending::before {
            content: '\1F817'
        }
    }
}

tbody td {
    font-weight: bold;
}

table.accountManagement {
    width: 100%;

    th,
    td {
        text-align: left;
    }

    td {
        padding: 5px 0;
    }

    button {
        background: none;
        border: none;
        cursor: pointer;
    }
}

table.trasactionHistory {
    width: 100%;
}

.row-action {
    vertical-align: middle;
    text-align: center;
}

/*#endregion*/

section.box {
    background-color: #EEE;
    border-radius: 10px;
    padding: 15px;
    font-size: 1.1em;
    margin-bottom: 20px;
    border: none;

    .fieldGroup {
        margin-bottom: 20px;

        &:last-child {
            margin-bottom: 0;
        }

        label {
            display: inline-block;
            width: 150px;
        }
    }

    select,
    input[type=text],
    input[type=number] {
        font-size: 1em;
    }
}

section.actions {
    input[type=submit] {
        font-size: 1.1em;
    }
}

.input-group-prepend {
    font-size: 1.5rem;
    margin-right: 0;
}

fieldset {
    position: relative;
    border: 1px solid (var(--bs-border-color));
    padding: 20px;
    padding-top: 15px;
    border-radius: 6px;

    legend {
        display: block;
        //font-weight: normal;
        font-size: 1.5rem;
        padding: 0 5px;
        margin: 0;
    }
}

input[type=checkbox] {
    margin-right: 5px;
}

table .balance {
    text-align: right;
}

form>div {
    margin-bottom: 1rem;
}

.horizontal-form-controls {
    display: flex;
    align-items: flex-end;
    ;
}

.page-header {
    .container {
        column-gap: 1rem;
    }

    h2 {
        flex-grow: 1;
        text-align: left !important;
    }

}

.pagination {
    font-family: var(--font-family-alt);
    justify-content: flex-end;
    --bs-pagination-padding-x: 0.75rem;
    --bs-pagination-padding-y: 0.375rem;
    --bs-pagination-font-size: 1rem;
    --bs-pagination-color: var(--bs-body-color);
    --bs-pagination-bg: transparent;
    --bs-pagination-border-width: 1px;
    --bs-pagination-border-color: #dee2e6;
    --bs-pagination-hover-color: var(--bs-link-hover-color);
    --bs-pagination-hover-bg: #e9ecef;
    --bs-pagination-hover-border-color: #dee2e6;
    --bs-pagination-focus-color: var(--bs-link-hover-color);
    --bs-pagination-focus-bg: #e9ecef;
    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
    --bs-pagination-active-color: #fff;
    --bs-pagination-active-bg: #0d6efd;
    --bs-pagination-active-border-color: #dee2e6;
    --bs-pagination-disabled-color: #6c757d;
    --bs-pagination-disabled-bg: transparent;
    --bs-pagination-disabled-border-color: #dee2e6;
    display: flex;
    padding-left: 0;
    list-style: none;
}

.control-panel {
    position: absolute;
    right: 15px;
    top: 15px;
}

legend svg {
    transition: transform 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
}

legend.open svg {
    transform: rotate(-180deg);
}

@import 'responsive';

